# koa-biblio-toolkit

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
R/: bibliometrix_wrapper.R
data/ontology/: acupuncture_variants.yaml
data/sample/: pubmed_sample.txt  wos_sample.txt
docs/: data_export_guide.md
koa_biblio_toolkit/: __init__.py  cli.py  ontology.py  pipeline.py
koa_biblio_toolkit/parsers/: __init__.py  endnote.py  pubmed.py  ris.py
templates/comorbidity/: koa_depression.yaml  koa_obesity.yaml  koa_sarcopenia.yaml  koa_sleep_disorders.yaml
templates/keywords/: koa_sleep.yaml
tests/: test_ontology.py  test_parsers.py  test_pipeline.py
